@@ -1,6 +1,7 @@
 Tis file documents the revision history for Perl extension Catalyst.
 
 5.50
+        - Allow debug to be disabled via ENV as well as enabled.
         - Added -scripts option to catalyst.pl for script updating
         - Changed helpers to default to long types, Controller instead of C
         - Added Catalyst::Controller, Catalyst::Model and Catalyst::View
